Fix: Re-add mixblend-mode so that image contrast with text on smaller devices

--- a/src/components/FeaturedProjects/index.scss
+++ b/src/components/FeaturedProjects/index.scss
@@ -55,6 +55,7 @@
     height: 100%;
     border-radius: 5px;
     object-fit: cover;
+    mix-blend-mode: multiply;
     filter: grayscale(100%) brightness(90%);
   }
 
@@ -113,10 +114,11 @@
     }
 
     &__img {
+      mix-blend-mode: normal;
+
       &:hover {
         transition: all 0.25s ease-in-out;
         cursor: pointer;
-        mix-blend-mode: normal;
         filter: none;
       }
     }
